# archlinux

./: .gitignore  README.md
arm-2009q1-arm-none-linux-gnueabi/: .gitignore  PKGBUILD
basis-universal-src/: PKGBUILD
bin32-nsis/: .gitignore  PKGBUILD
blender-freestyle-svn/: PKGBUILD  blender.config  use_usr.diff
blender-git/: PKGBUILD
blender-svn/: PKGBUILD  blender-update-scripts  blender.config
blender2.4-svn/: PKGBUILD  blender.config  blender.install
bluedevil-git/: PKGBUILD
c6run/: .gitignore  PKGBUILD
clang-svn/: PKGBUILD
cmake-debug/: .gitignore  PKGBUILD  bootstrap.patch
eclipse-visualvm/: .gitignore
emscripten-box2d/: PKGBUILD
emscripten-bullet/: PKGBUILD
emscripten-faad2/: PKGBUILD
emscripten-openexr/: PKGBUILD  b44ExpLogTable.h  dwaLookups.h
emscripten-zstd/: PKGBUILD
gcc47/: .gitignore  PKGBUILD
gltools/: .gitignore  CMakeLists.txt  FindGLTools.cmake  PKGBUILD
gp2xsdk-binutils/: .gitignore  PKGBUILD
gp2xsdk-gcc/: .gitignore  PKGBUILD
gp2xsdk-gcc-prebuild/: .gitignore  PKGBUILD  gcc-prebuild-3.4.6.patch
gp2xsdk-glibc/: .gitignore  PKGBUILD  gcc-3.4.6-glibc-2.2.5.patch
gp2xsdk-libs/: PKGBUILD
imgui-src/: PKGBUILD
inkscape/: PKGBUILD  inkscape.install
kate-filetree-plugin/: .gitignore  PKGBUILD
kdelibs-patched-kate/: .gitignore  PKGBUILD  katetextblock.cpp.patch  katetexthistory.cpp.patch  katetexthistory.h.patch
kdevcpptools-git/: PKGBUILD
kdevelop-controlflowgraph-git/: PKGBUILD
kdevelop-css-git/: PKGBUILD
kdevelop-extra-plugins-php-docs-git/: PKGBUILD
kdevelop-extra-plugins-php-docs-svn/: PKGBUILD
(+67 files in other folders)
